방리스트 데이터베이스에서 가져오기

--- a/app/src/main/res/layout/activity_together.xml
+++ b/app/src/main/res/layout/activity_together.xml
@@ -21,6 +21,18 @@
             app:srcCompat="@drawable/icon_plus" />
     </RelativeLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_popular_movie"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <!--하단 네비게이션-->
     <include
         android:id="@+id/includ_bottom_navigation"
