--- a/app/src/main/res/layout/row_recyclerview_room.xml
+++ b/app/src/main/res/layout/row_recyclerview_room.xml
@@ -12,32 +12,97 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="1dp">
+        app:cardCornerRadius="10dp"
+        app:cardUseCompatPadding="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_marginBottom="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:text="방번호:" />
+
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView"
+                android:layout_alignStart="@+id/textView"
+                android:layout_alignEnd="@+id/textView"
+                android:layout_marginTop="5dp"
+                android:text="제목:" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView"
+                android:layout_alignBottom="@+id/textView"
+                android:layout_marginStart="102dp"
+                android:layout_toEndOf="@+id/text_room_no"
+                android:text="작성자:" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/textView"
+                android:layout_alignEnd="@+id/textView"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="5dp"
+                android:text="참가수:" />
 
             <TextView
                 android:id="@+id/text_room_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="방번호" />
+                android:layout_alignTop="@+id/textView"
+                android:layout_alignBottom="@+id/textView"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/textView"
+                android:text="0번" />
 
             <TextView
                 android:id="@+id/text_user_num"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView4"
+                android:layout_alignBottom="@+id/textView4"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/textView4"
                 android:text="몇명" />
 
             <TextView
                 android:id="@+id/text_writer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="작성자" />
-        </LinearLayout>
+                android:layout_alignTop="@+id/textView3"
+                android:layout_alignBottom="@+id/textView3"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/textView3"
+                android:text="msbe" />
+
+            <TextView
+                android:id="@+id/text_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/textView2"
+                android:layout_alignBottom="@+id/textView2"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/textView2"
+                android:text="안녕하세요" />
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
