기본적인 소켓 채팅 소통하기.

--- a/app/src/main/res/layout/activity_room_chat.xml
+++ b/app/src/main/res/layout/activity_room_chat.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".activity.RoomChatActivity">
 
+    <Button
+        android:id="@+id/button_send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="164dp"
+        android:text="보내기"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
