--- a/app/src/main/res/layout/row_recyclerview_chat_message.xml
+++ b/app/src/main/res/layout/row_recyclerview_chat_message.xml
@@ -17,7 +17,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="vertical"
             android:padding="10dp">
@@ -57,10 +57,9 @@
                 android:id="@+id/textView_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/textView_nick_name"
-                android:layout_alignBottom="@+id/textView_nick_name"
-                android:layout_marginStart="20dp"
-                android:layout_toEndOf="@+id/textView_nick_name"
+                android:layout_below="@+id/textView_message"
+                android:layout_alignStart="@+id/textView_message"
+                android:layout_marginTop="10dp"
                 android:text="시간" />
 
         </RelativeLayout>
