--- a/app/src/main/res/layout/activity_room_chat.xml
+++ b/app/src/main/res/layout/activity_room_chat.xml
@@ -26,6 +26,7 @@
         android:id="@+id/recyclerView_chat_message"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#7799CF"
         app:layout_constraintBottom_toTopOf="@+id/editText_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
