--- a/app/src/main/res/layout/activity_together.xml
+++ b/app/src/main/res/layout/activity_together.xml
@@ -27,6 +27,7 @@
         android:id="@+id/recyclerView_room"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#7799CF"
         app:layout_constraintBottom_toTopOf="@+id/includ_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
