[TCP/IP 소켓통신] 메시지 시간표시 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorPurple2">#5F04B4</color>
     <color name="colorSilver">#C0C0C0</color>
+    <color name="colorYellow">#D7DF01</color>
 </resources>
