--- a/app/src/main/res/layout/activity_room_chat.xml
+++ b/app/src/main/res/layout/activity_room_chat.xml
@@ -37,7 +37,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="보내기"
+        android:backgroundTint="@color/colorYellow"
+        android:text="전송"
         app:layout_constraintBottom_toBottomOf="@+id/editText_message"
         app:layout_constraintStart_toEndOf="@+id/editText_message"
         app:layout_constraintTop_toTopOf="@+id/editText_message" />
@@ -46,11 +47,11 @@
         android:id="@+id/editText_message"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="4dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="메시지를 입력해주세요"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
