--- a/app/src/main/res/layout/row_recyclerview_room.xml
+++ b/app/src/main/res/layout/row_recyclerview_room.xml
@@ -102,6 +102,19 @@
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/textView2"
                 android:text="안녕하세요" />
+
+            <ImageView
+                android:id="@+id/image_key"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_alignTop="@+id/text_writer"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="10dp"
+                android:visibility="gone"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/icon_key" />
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
