[무전기] UDP 음성 통신 예제 가져오기

--- a/app/src/main/res/layout/activity_room_chat.xml
+++ b/app/src/main/res/layout/activity_room_chat.xml
@@ -22,15 +22,56 @@
             app:srcCompat="@drawable/abc_vector_test" />
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:weightSum="4"
+        android:background="@drawable/border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
+
+        <ImageView
+            android:id="@+id/image_chat"
+            android:padding="5dp"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icon_chat" />
+        <ImageView
+            android:id="@+id/image_map"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icon_map" />
+        <ImageView
+            android:id="@+id/image_microphone"
+            android:padding="5dp"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icon_microphone" />
+        <ImageView
+            android:id="@+id/image_user_list"
+            android:padding="5dp"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/icon_user_list" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_chat_message"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#7799CF"
         app:layout_constraintBottom_toTopOf="@+id/editText_message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
 
     <Button
         android:id="@+id/button_send"
