--- a/app/src/main/res/layout/activity_location_sharing_map.xml
+++ b/app/src/main/res/layout/activity_location_sharing_map.xml
@@ -64,6 +64,7 @@
     <RelativeLayout
         android:id="@+id/map_view"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
