--- a/app/src/main/res/layout/activity_together_user_list.xml
+++ b/app/src/main/res/layout/activity_together_user_list.xml
@@ -61,7 +61,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_room"
+        android:id="@+id/recyclerView_room_user_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="10dp"
