--- a/app/src/main/res/layout/row_recyclerview_tracking_board.xml
+++ b/app/src/main/res/layout/row_recyclerview_tracking_board.xml
@@ -26,8 +26,8 @@
             <ImageView
                 android:id="@+id/imageView_tracking_thumbnail"
                 android:layout_width="90dp"
+                android:scaleType="centerCrop"
                 android:layout_height="match_parent"
-                android:background="@drawable/border"
                 android:src="@drawable/icon_route"/>
 
             <TextView
