--- a/app/src/main/res/layout/activity_tracking_board.xml
+++ b/app/src/main/res/layout/activity_tracking_board.xml
@@ -5,14 +5,22 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_tracking_board"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
         app:layout_constraintBottom_toTopOf="@id/includ_bottom_navigation"
+        android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="10dp" />
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_tracking_board"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            tools:layout_editor_absoluteX="10dp" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
 
     <!--하단 네비게이션-->
     <include
