--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -66,6 +66,47 @@
         app:layout_constraintStart_toStartOf="@+id/button_modify_profile"
         app:layout_constraintTop_toBottomOf="@+id/button_modify_profile" />
 
+    <FrameLayout
+        android:id="@+id/frameLayout_my_tracking"
+        android:layout_width="122dp"
+        android:layout_height="107dp"
+        android:layout_marginTop="116dp"
+        android:background="@drawable/border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="77dp"
+            android:layout_height="49dp"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="10dp"
+            app:srcCompat="@drawable/icon_route" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:text="My Tracking List"
+            android:textColor="@color/colorBlack"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_my_tracking_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="10dp"
+            android:text="0"
+            android:textColor="@color/colorBlack"
+            android:textStyle="bold" />
+    </FrameLayout>
+
 
     <!--하단 네비게이션-->
     <include
