--- a/app/src/main/res/layout/activity_tracking_board_view.xml
+++ b/app/src/main/res/layout/activity_tracking_board_view.xml
@@ -8,6 +8,7 @@
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
+        android:layout_marginTop="5dp"
         android:layout_height="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
