--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="0dp"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/includ_bottom_navigation"/>
+        app:layout_constraintBottom_toTopOf="@+id/includ_bottom_navigation">
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/imageView_tracking_button"
@@ -25,6 +26,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/icon_video_start" />
+
+    <ImageView
+        android:id="@+id/imageView_camera"
+        android:layout_margin="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:srcCompat="@drawable/icon_camera" />
 
     <!--하단 네비게이션-->
     <include
