[트래킹 View] 트래킹하면서 찍은 사진 marker로 표시, 마커클릭시 사진 보이기, recyclerView로 해당 트래킹중에 찍은 사진 목록 보여주기, 사진 클릭시 해당 위치의 marker로 이동

--- a/app/src/main/res/layout/activity_tracking_board_view.xml
+++ b/app/src/main/res/layout/activity_tracking_board_view.xml
@@ -50,11 +50,11 @@
         app:layout_constraintTop_toBottomOf="@id/relativeLayout"/>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map_view"
         tools:layout_editor_absoluteX="10dp">
 
@@ -67,59 +67,66 @@
             android:textSize="25sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="40dp" />
+
         <TextView
             android:id="@+id/textView_start_location"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:text="대한민국 서울 특별시"
             android:textColor="@color/colorBlack"
             android:textSize="25sp" />
+
         <TextView
             android:id="@+id/textView_start_time"
-            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:text="2020.6.23. 7:01 PM"
             android:textColor="@color/colorBlack"
             android:textSize="25sp" />
+
         <RelativeLayout
             android:id="@+id/relativeLayout2"
             android:layout_width="match_parent"
-            android:layout_marginTop="5dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
             <TextView
                 android:id="@+id/textView"
-                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:text="거리"
                 android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/textView2"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/textView"
+                android:layout_marginTop="5dp"
                 android:text="이동시간"
                 android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/textView3"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/textView2"
+                android:layout_marginTop="5dp"
                 android:text="평균 속도"
                 android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/textView4"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/textView3"
+                android:layout_marginTop="5dp"
                 android:text="난이도"
                 android:textSize="15sp" />
 
@@ -127,19 +134,20 @@
                 android:id="@+id/textView_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_marginLeft="100dp"
+                android:layout_marginTop="5dp"
                 android:layout_toRightOf="@id/textView"
                 android:text="0.1km"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
+
             <TextView
                 android:id="@+id/textView_move_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_below="@id/textView_distance"
                 android:layout_alignEnd="@id/textView_distance"
+                android:layout_marginTop="5dp"
                 android:text="00:00:09"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
@@ -148,9 +156,9 @@
                 android:id="@+id/textView_average_speed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_below="@id/textView_move_time"
                 android:layout_alignEnd="@id/textView_move_time"
+                android:layout_marginTop="5dp"
                 android:text="59.2km/h"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
@@ -159,9 +167,9 @@
                 android:id="@+id/textView_difficult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_below="@id/textView_average_speed"
                 android:layout_alignEnd="@id/textView_average_speed"
+                android:layout_marginTop="5dp"
                 android:text="쉬움"
                 android:textColor="@color/colorBlack"
                 android:textSize="15sp" />
@@ -170,9 +178,9 @@
                 android:id="@+id/image_profile"
                 android:layout_width="64dp"
                 android:layout_height="53dp"
+                android:layout_alignTop="@id/textView_distance"
                 android:layout_marginStart="80dp"
                 android:layout_toEndOf="@id/textView_distance"
-                android:layout_alignTop="@id/textView_distance"
                 android:src="@drawable/icon_profile_invert" />
 
             <TextView
@@ -182,10 +190,10 @@
                 android:layout_below="@id/image_profile"
                 android:layout_alignStart="@id/image_profile"
                 android:layout_alignEnd="@id/image_profile"
+                android:layout_marginTop="5dp"
                 android:gravity="center_horizontal"
                 android:text="아이디"
                 android:textColor="@color/colorBlack"
-                android:layout_marginTop="5dp"
                 android:textSize="15sp" />
 
             <TextView
@@ -202,5 +210,16 @@
 
         </RelativeLayout>
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_photo_list"
+        android:layout_margin="10dp"
+        android:background="@drawable/border"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
