--- a/app/src/main/res/layout/custom_callout_balloon.xml
+++ b/app/src/main/res/layout/custom_callout_balloon.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical" >
         <TextView
             android:id="@+id/textView_title"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:textColor="@color/colorBlack"
@@ -22,9 +22,10 @@
             android:text="사진" />
         <TextView
             android:id="@+id/textView_time"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:visibility="gone"
             android:textSize="18sp"
             android:text="2020. 06. 07.  1:35 오후" />
 
