[트래킹] 트래킹중 사진촬영한 사진들 저장 및 불러오기 [얼굴인식] 선글라스 씌우기 [길찾기] 자전거빼고 전부 동작

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:srcCompat="@drawable/icon_camera" />
 
+    <ImageView
+        android:id="@+id/imageView_get_direction"
+        android:layout_margin="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/icon_get_directions" />
+
     <!--하단 네비게이션-->
     <include
         android:id="@+id/includ_bottom_navigation"
