--- a/app/src/main/res/layout/activity_tracking_board_view.xml
+++ b/app/src/main/res/layout/activity_tracking_board_view.xml
@@ -215,6 +215,7 @@
         android:id="@+id/recyclerView_photo_list"
         android:layout_margin="10dp"
         android:background="@drawable/border"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
